--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,46 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Budget Planner</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-grid>
+      <ion-row>
+        <ion-col size-md="6" offset-md="3">
+          <ion-card>
+            <ion-card-header>New expense</ion-card-header>
+            <ion-card-content>
+              <ion-item>
+                <ion-label position="floating">Expense reason</ion-label>
+                <ion-input type="text" id="inputReason"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Expense amount</ion-label>
+                <ion-input type="number" id="inputAmount"></ion-input>
+              </ion-item>
+              <div class="ion-margin-vertical ion-text-right">
+                <ion-button fill="outline" color="danger" id="buttonCancel">
+                  <ion-icon slot="start" name="close"></ion-icon> Clear
+                </ion-button>
+                <ion-button fill="outline" color="success" id="buttonConfirm">
+                  <ion-icon slot="start" name="add"></ion-icon>Add expense
+                </ion-button>
+              </div>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-md="6" offset-md="3">
+          <ion-list size-md="6" offset-md="3" id="expensesList"></ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-md="6" offset-md="3">
+          <p id="totalExpenses" class="ionic-margin"></p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
 </ion-app>
